<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/light_blue"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/pw"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/light_blue"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btn_kakao_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#FEE500"
        android:paddingLeft="18dip"
        android:drawableLeft="@drawable/symbol_kakao_custom"
        android:text="@string/kakao_log_in"
        android:textColor="#CC000000"
        android:textSize="20sp"
        android:layout_gravity="center" />


    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/light_blue"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/find_id"
            android:layout_gravity="left"
            android:textColor="@color/black" />



        <TextView
            android:id="@+id/find_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="135dp"
            android:text="@string/find_pw"
            android:layout_gravity="right"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>