<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_register"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:background="@null"
            app:srcCompat="@drawable/common_close_custom" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:textSize="30dp"
            android:textAlignment="center"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_blue"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_individual"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/individual"
            android:backgroundTint="@color/blue"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_trainer"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/trainer"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"/>
    </LinearLayout>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tb_id">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="22sp"
                    android:inputType="text"
                    android:hint="@string/name"
                    android:background="@drawable/border_line"
                    android:padding="5dp"
                    android:maxLength="100"/>
            </TableRow>

            <TextView
                android:id="@+id/textView_requirement4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_name"
                android:textColor="@color/red"
                android:textSize="15sp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/editTextText_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="22sp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/border_line"
                    android:padding="5dp"
                    android:hint="아이디"
                    android:maxLength="100"/>
            </TableRow>


            <TextView
                android:id="@+id/textView_requirement1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_id"
                android:textColor="@color/red"
                android:textSize="15sp"/>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/editText_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="22sp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:background="@drawable/border_line"
                    android:padding="5dp"/>
            </TableRow>
            <TextView
                android:id="@+id/textView_requirement2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_pw"
                android:textColor="@color/red"
                android:textSize="15sp"/>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <EditText
                    android:id="@+id/editText_pw_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"
                    android:textSize="22sp"
                    android:background="@drawable/border_line"
                    android:padding="5dp"/>
            </TableRow>
            <TextView
                android:id="@+id/textView_requirement3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:visibility="gone"
                android:text="@string/password_not_coincide"
                android:textColor="@color/red"
                android:textSize="15sp"/>

            <TableRow
                android:id="@+id/row_birth_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/editText_birth_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="22sp"
                    android:inputType="text"
                    android:hint="@string/birth_day"
                    android:background="@drawable/border_line"
                    android:padding="5dp"/>

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:id="@+id/radio_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="남자" />

                    <RadioButton
                        android:id="@+id/radio_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="여자" />
                </RadioGroup>


            </TableRow>

            <TextView
                android:id="@+id/textView_requirement6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_birthday"
                android:textColor="@color/red"
                android:textSize="15sp"/>

            <TableRow
                android:id="@+id/row_branch_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_branch_office"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="5"
                    android:textSize="22sp"
                    android:inputType="text"
                    android:hint="@string/branch_office"
                    android:background="@drawable/border_line"
                    android:padding="5dp"/>

            </TableRow>

            <TableRow
                android:id="@+id/row_phoneNum"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phoneNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="4"
                    android:textSize="22sp"
                    android:inputType="phone"
                    android:hint="@string/phone_num"
                    android:background="@drawable/border_line"
                    android:padding="5dp"/>

                <Button
                    android:id="@+id/btn_certification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginLeft="10dp"
                    android:text="@string/certification"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/black"/>
            </TableRow>

            <TextView
                android:id="@+id/certification_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certification_send"
                android:textColor="@color/green"
                android:visibility="gone"
                android:textSize="15sp"/>

            <TableRow
                android:id="@+id/row_certification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout_timer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:padding="5dp"
                    android:background="@drawable/linear_border_line"
                    android:orientation="horizontal"
                    >

                <EditText
                    android:id="@+id/certificationNum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="22sp"
                    android:inputType="number"
                    android:hint="@string/certification_num"
                    android:padding="5dp"
                    android:background="@null"
                    />

                    <TextView
                        android:id="@+id/timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:inputType="text"
                        android:background="@null"
                        android:text="05:00"
                        android:textColor="@color/red"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:text="@string/confirm"
                    android:backgroundTint="@color/orange"
                    android:textColor="@color/black"/>
            </TableRow>

            <TextView
                android:id="@+id/certification_compl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certification_compl"
                android:textColor="@color/green"
                android:visibility="gone"
                android:textSize="15sp"/>

            <TableRow
                android:layout_marginTop="30dp">
                <TextView
                    android:id="@+id/textView_all_terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:textSize="21sp"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:text="@string/all_terms"/>

                <CheckBox
                    android:id="@+id/checkbox_all_terms"
                    android:layout_gravity="right" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView_using_terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:inputType="number"
                    android:textColor="@color/red"
                    android:hint="@string/using_terms"/>

                <CheckBox
                    android:id="@+id/checkbox_using_terms"
                    android:layout_gravity="right" />
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/textView_private_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/private_info"
                    android:inputType="number"
                    android:textColor="@color/red"
                    android:textSize="17sp" />
                <CheckBox
                    android:id="@+id/checkbox_private_info"
                    android:layout_gravity="right"
                    />
            </TableRow>

            <Button
                android:id="@+id/btn_registerComplete"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/register_complete3"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue"
                android:textColor="@color/black"
                android:enabled="false"/>
        </TableLayout>
    </ScrollView>
</LinearLayout>